Fix JDK 8 compilation errors: List.of and URLDecoder.decode
- Replace List.of() (Java 9+) with ImmutableList.of() in MetadataResultConstants
- Replace URLDecoder.decode(String, Charset) (Java 10+) with
  URLDecoder.decode(String, String) in UserAgentManager

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Signed-off-by: samikshya-chand_data <samikshya.chand@databricks.com>